Fix title bar logo alignment

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -4,6 +4,8 @@
   font-weight: 800;
   font-style: normal;
   font-display: swap;
+  ascent-override: 85%;
+  descent-override: 15%;
 }
 
 :root {
@@ -37,10 +39,6 @@
     font-family: var(--vp-font-family-heading);
     font-size: 1.25rem;
     font-weight: 800;
-
-    span {
-        padding-top: 0.4rem;
-    }
   }
 }
 
